--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <nav class="navigation">
                                 <ul class="navigation-list">
                                     <li class="navigation-item">
-                                        <a href="#" class="navigation-link">
+                                        <a href="https://kamranqasimovsgithub.github.io/website-development.github.io/" class="navigation-link">
                                             Home
                                         </a>
                                     </li>
