--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 
 </head>
 <body>
-    <header id='home' class="header">
+    <header id='home' class="header animate-left">
         <div class="container">
             <div class="row row-small-size align-center justify-between">
-
                 <!-- Navbar menu -->
                 <div  class="column ">
                     <div class="row  align-center">
                         <div class="column">
-                            <a href="/" class="logo" aria-label="logo" title="logo">
+                            <a href="#home" class="logo" aria-label="logo" title="logo">
                                 <img src="assets/image/logo.png" alt="Logo" srcset="">
                             </a>
                         </div>
@@ -130,7 +129,7 @@
             <div class="pink-section-background">
                 <div class="row pink-section-small align-center">
                     <div class="column ">
-                        <img src="assets/image/about.png" alt="" srcset="">
+                        <img src="assets/image/about.png" alt="image" srcset="">
                     </div>
                     <div class="column flex-fill">
                         <div class="pink-section-content">
@@ -157,7 +156,7 @@
                 <div class="column flex-2 margin-bottom-30 mobile-margin-bottom">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/image/card1.png" alt="" srcset="">
+                            <img src="assets/image/card1.png" alt="image" srcset="">
                         </div>
                         <div class="card-content">
                             <div class="card-header">
@@ -179,7 +178,7 @@
                 <div class="column flex-2 margin-bottom-30 mobile-margin-bottom">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/image/card2.png" alt="" srcset="">
+                            <img src="assets/image/card2.png" alt="card" srcset="">
                         </div>
                         <div class="card-content">
                             <div class="card-header">
@@ -199,7 +198,7 @@
                 <div class="column flex-2 margin-bottom-30 mobile-margin-bottom">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/image/card3.png" alt="" srcset="">
+                            <img src="assets/image/card3.png" alt="card" srcset="">
                         </div>
                         <div class="card-content">
                             <div class="card-header">
@@ -219,7 +218,7 @@
                 <div class="column flex-2 margin-bottom-30 mobile-margin-bottom">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/image/card4.png" alt="" srcset="">
+                            <img src="assets/image/card4.png" alt="card" srcset="">
                         </div>
                         <div class="card-content">
                             <div class="card-header">
@@ -257,7 +256,7 @@
                         <div class="comment-item swiper-slide-active">
                             <div class="comment-item-container">
                                 <div class="comment-image">
-                                    <img src="assets/image/avatar1.png" alt="">
+                                    <img src="assets/image/avatar1.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
                                     <h4>John Fang</h4>
@@ -271,7 +270,7 @@
                         <div class="comment-item swiper-slide-active">
                             <div class="comment-item-container">
                                 <div class="comment-image">
-                                    <img src="assets/image/avatar2.png" alt="">
+                                    <img src="assets/image/avatar2.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
                                     <h4>Alice Brown</h4>
@@ -285,7 +284,7 @@
                         <div class="comment-item">
                             <div class="comment-item-container">
                                 <div class="comment-image">
-                                    <img src="assets/image/avatar3.png" alt="">
+                                    <img src="assets/image/avatar3.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
                                     <h4>Cris Lukas</h4>
@@ -385,17 +384,17 @@
                             <ul class="social-media-list">
                                 <li class="social-media-item">
                                     <a href="#" class="social-media-link">
-                                        <img src="assets/image/instagram.svg" alt="" srcset="">
+                                        <img src="assets/image/instagram.svg" alt="icon" srcset="">
                                     </a>
                                 </li>
                                 <li class="social-media-item">
                                     <a href="#" class="social-media-link">
-                                        <img src="assets/image/fb.svg" alt="" srcset="">
+                                        <img src="assets/image/fb.svg" alt="icon" srcset="">
                                     </a>
                                 </li>
                                 <li class="social-media-item">
                                     <a href="#" class="social-media-link">
-                                        <img src="assets/image/ic.svg" alt="" srcset="">
+                                        <img src="assets/image/ic.svg" alt="icon" srcset="">
                                     </a>
                                 </li>
                             </ul>
