--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                                     <img src="assets/image/avatar1.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
-                                    <h4>John Fang</h4>
-                                    <a href="#">johnfaang@mail.com</a>
+                                    <h4>John Doe</h4>
+                                    <a href="#">johndoe@example.com</a>
                                     <p>Ceo & Founder</p>
                                 </div>
                             </div>                       
@@ -273,8 +273,8 @@
                                     <img src="assets/image/avatar2.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
-                                    <h4>Alice Brown</h4>
-                                    <a href="#">abrwbusiness@mail.com</a>
+                                    <h4>Jane Lincy</h4>
+                                    <a href="#">janelincy@example.com</a>
                                     <p>Business Analytics</p>
                                 </div>
                             </div>                       
@@ -287,8 +287,8 @@
                                     <img src="assets/image/avatar3.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
-                                    <h4>Cris Lukas</h4>
-                                    <a href="#">lukascorp@mail.com</a>
+                                    <h4>Sam White</h4>
+                                    <a href="#">samwhite@example.com</a>
                                     <p>Project Manager</p>
                                 </div>
                             </div>                       
@@ -334,7 +334,7 @@
                         <br> Quo, vitae 55, Str 100.
                     </address>
                     <a href="mailto:example@mail.com" class=" mobile-margin-bottom">example@mail.com</a>
-                    <a href="tel:+122334567">Tel: +1345678</a>
+                    <a href="tel:+122334567">Tel: +134567888990</a>
                 </div>
                 <div class="column  mobile-margin-bottom">
                     <div class="row footer-links text-center justify-between">
@@ -405,7 +405,7 @@
             <div class="row justify-between footer-copyright">
                 <div class="column  mobile-margin-bottom">
                     <p class="copyright">
-                        © Datalandhouse, 2022
+                        © Datalandhouse, 2024
                     </p>
                 </div>
                 <div class="column">
