--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                                     <img src="assets/image/avatar3.png" alt="avatar">
                                 </div>
                                 <div class="comment-content">
-                                    <h4>Sam White</h4>
-                                    <a href="#">samwhite@example.com</a>
+                                    <h4>Toni Adams</h4>
+                                    <a href="#">toniadams@example.com</a>
                                     <p>Project Manager</p>
                                 </div>
                             </div>                       
@@ -405,7 +405,7 @@
             <div class="row justify-between footer-copyright">
                 <div class="column  mobile-margin-bottom">
                     <p class="copyright">
-                        © Datalandhouse, 2024
+                         © 2025 All Rights Reserved
                     </p>
                 </div>
                 <div class="column">
